rust_stubgen_e2e_test/test_immutable_types/rust/tests/ui/mut_borrow_readonly.stderr
warning: variable does not need to be mutable
  --> tests/ui/mut_borrow_readonly.rs:24:9
   |
24 |     let mut v = ImmutableVersion::new(1, 2, 3, tvm_ffi::String::from("x")).unwrap();
   |         ----^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0596]: cannot borrow data in dereference of `ImmutableVersion` as mutable
  --> tests/ui/mut_borrow_readonly.rs:25:24
   |
25 |     let _r: &mut i64 = &mut v.major;
   |                        ^^^^^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `ImmutableVersion`
